Fix alignment

--- a/handlers/static/css/style.css
+++ b/handlers/static/css/style.css
@@ -27,7 +27,8 @@ form {
 }
 
 .content {
-  padding: 3rem 0;
+  padding-bottom: 3rem;
+  padding-top: 3rem;
 }
 
 .content h1,
